Finish display of books

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		</ul>
 	</div>
 	<div id="show-panel"></div>
+	<script type="text/javascript" src="./js/adapter.js"></script>
+	<script type="text/javascript" src="./js/domController.js"></script>
+	<script type="text/javascript" src="./js/book.js"></script>
 	<script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
