--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
 		</ul>
 	</div>
-	<div id="show-panel"></div>
+	<div id="show-panel">
+
+	</div>
+	<script type="text/javascript" src="./js/Adapter.js"></script>
+	<script type="text/javascript" src="./js/Book.js"></script>
+	<script type="text/javascript" src="./js/BookController.js"></script>
 	<script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
